# ChangeLog for games-emulation/bsnes
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2

  20 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> bsnes-0.059_p2.ebuild:
  Fixed stripping in snapshot.

  20 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  -files/bsnes-0.047-makefile.patch, bsnes-0.059.ebuild,
  bsnes-0.059_p2.ebuild, +files/bsnes-0.059-makefile.patch:
  Applied SpanKY's suggestions. Updated Makefile patch. Still need to
  disable stripping in the plugins.

  14 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.057.ebuild,
  -bsnes-0.058.ebuild:
  Cleaned out old versions.

*bsnes-0.059_p2 (14 Jan 2010)

  14 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> +bsnes-0.059_p2.ebuild:
  Added latest development snapshot. Since those are packaged with extra
  libraries, the ebuild blocks on external copies of snesreader, snesfilter
  and supergameboy, and builds the bundled ones. To my mind, that's the best
  solution.

*bsnes-0.059 (07 Jan 2010)

  07 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> +bsnes-0.059.ebuild:
  Bumped.

  21 Dec 2009; Michał Ziąbkowski <mziab@o2.pl> metadata.xml:
  Fixed metadata.xml.

  09 Dec 2009; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.053.ebuild,
  -bsnes-0.054.ebuild, -bsnes-0.055.ebuild, +bsnes-0.058.ebuild:
  Bumped. Removed cruft.

  23 Nov 2009; Michał Ziąbkowski <mziab@o2.pl> +bsnes-0.057.ebuild:
  Bumped.

  04 Nov 2009; Michał Ziąbkowski <mziab@o2.pl> +bsnes-0.055.ebuild,
  metadata.xml:
  Bumped. Now with optional Super Gameboy support.

  19 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> +bsnes-0.054.ebuild:
  Bumped.

  18 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.052.ebuild,
  +bsnes-0.053.ebuild, metadata.xml:
  Bumped. Removed previous version. Added snesfilter flag for enabling extra
  image filters. Made snesreader optional, but enabled by default.

  08 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> bsnes-0.052.ebuild:
  Fixed whitespace.

  03 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.050.ebuild,