@@ -1,7 +1,7 @@
 AUX bsnes-0.059-makefile.patch 581 RMD160 fb125e239e2eea3b3edc3228bb58e1cb2b40e0fe SHA1 db308465835f4971f5ba6ab38c9714d1187e71e3 SHA256 f7441909f170a79036c1730ca998fd0831405ee96b794eaaddc8f7faaadddde5
 DIST bsnes_v059.tar.bz2 345947 RMD160 36a1897bfb213b91de576703b223e7e72ad286ec SHA1 9a7ae7dffabc2d685f22ccc067a5aec42546448e SHA256 370613e1abb8b20fad792ad8c7af29361f8e3e62847d11671d540396f94a3065
 DIST bsnes_v059r02.zip 5418543 RMD160 12ea528f6272bdb0be63e2b6abaafec99a4d189f SHA1 b635b004c99fc8b96caf3cc1df7131a65202c624 SHA256 c17aa0c7bd6309c839786469312e6c658a5388b1d2de41db956684113c9f04b8
-EBUILD bsnes-0.059.ebuild 1924 RMD160 0c8916f9db4121c6741f03b75faf6cfe91f0e137 SHA1 5e2c3aabf01729162b76ba8f5beac3299d7a4950 SHA256 a9708a1ada1b72c4e6e7c0cbd2a087feaead509148f822ffd6ca3d8175712bb2
-EBUILD bsnes-0.059_p2.ebuild 2549 RMD160 d8195ff518b80421aec8c9025155cc2b392ca8c5 SHA1 ae857f95dede129de065db5e19cfab13792a4b60 SHA256 e32ed6e85fcba885f563f1d920e92b4007a7a0c75671955707d894dec16e46b4
-MISC ChangeLog 6760 RMD160 5048dad6c4388b65d3a2a5fc6d054779603cf5e6 SHA1 29be0e527654f21511a8b15c85e3e4579bdfee96 SHA256 801d73987f7dca7bbbf4547e419be26621f514e09e7cefe13285fa4d474c41c9
+EBUILD bsnes-0.059.ebuild 1936 RMD160 c23d8a02df9917cf17e64fad4d4f489b1bf4c5a5 SHA1 a717bcc46c997e973723a8aea08db00ffb13a5e6 SHA256 d1041513b9eab8e1c538b3e57cfb90a262521ce89ffc3ab51d9b5bc4ea737667
+EBUILD bsnes-0.059_p2.ebuild 2652 RMD160 39a37151bf060d34ad5740d2a9194b76a7cbbcf9 SHA1 a0329d9a1a3b838a797193a131b7c396e828358a SHA256 dbb69bf4de4e96e9526f43a0fc5a537ae4afe3af136091e43f85e24350dfaa68
+MISC ChangeLog 6900 RMD160 fc3e407a5480563ea4a8c196b6cdb381a7bcac6d SHA1 ba42fe5b1ec1bfaf52f4197bcc3062815bf4a8fa SHA256 bbdc05504542fcd88f76dce93ad10bb4a1420d867431eda442fb689c7aa7c3f3
 MISC metadata.xml 566 RMD160 26a851455d9084720b1fa4bac734f22c9541741b SHA1 729bc585b67bad89af5fdb2fc8700a2637082a0f SHA256 5375d24d272cf0bbf3f0d8e38b032888b515c3c66b39d8032faa69a15469b776
