@@ -1,6 +1,10 @@
 # ChangeLog for games-emulation/bsnes
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 
+  23 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> bsnes-0.059.ebuild,
+  bsnes-0.059_p2.ebuild:
+  Moved all instances of sed to src_prepare.
+
   20 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> bsnes-0.059_p2.ebuild:
   Fixed stripping in snapshot.
 
